# stevfns-gmpa

./: .gitattributes  .gitignore  GMPA_plot_mitigation_curve.py  README.md  add_collab_flow.md  add_country.py  add_country_flow.md  collab_input.csv  generate_asset_template.py  main.py  new_country_assets_input.csv  new_country_input.csv  pyproject.toml  run_cases.py  run_collab_workflow.py  verify_assets.py
.github/workflows/: ci.yml
Code/Assets/: Assets_Dictionary.py
Code/Automations/: Mitigation_Potential_Diagram_Data_script.py  generate_carbon_budget.py  generate_collab_case_studies.py  prepare_data_for_website.py  readable_names_total_data_script.py  update_aut_scenarios.py  update_autarky.py  update_co2_budget_asset_types.py
Code/Network/: Network.py  __init__.py
Code/Plotting/: GMPA_plot_mitigation_curve.py  testing_plots.py
Code/Results/: GMPA_Results.py
Code/format_weather_profiles/: format_CF_profiles.py  lat–lon-data.csv  onshorebau_max_cap.csv  onshorebau_max_cap_calc.xlsx  pvbau_max_cap.csv  pvbau_max_cap_calc.xlsx
Data/Case_Study/: Case_Study_Builder_GMPA.py  rename_cs.py  total_data_unrounded_autarky.csv  total_data_unrounded_collaboration.csv
automation/: aut_collab_automation.py
env/: environment.yaml
src/Assets/: Assets_Dictionary.py
src/Automations/: generate_carbon_budget.py  generate_collab_case_studies.py  prepare_data_for_website.py
src/Network/: Network.py
src/assets/: Base_Assets.py  Special_Assets.py
src/format_weather_profiles/: format_CF_profiles.py  lat_lon_data.csv  onshorebau_max_cap.csv  pvbau_max_cap.csv  (+1 more)
(+7312 files in other folders)
