[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stevfns-gmpa"
version = "0.1.0"
description = "STEVFNs tool for GMPA use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "cvxpy",
  "pyyaml"
]

[dependency-groups]
dev = [
  "ruff",
  "pre-commit",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
